--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pluggy==1.6.0
 Pygments==2.19.2
 pyTelegramBotAPI==4.30.0
 pytest==9.0.2
-python-telegram-bot==22.6
+python-telegram-bot[job-queue]>=21.0
+Wikipedia-API>=0.6.0
 requests==2.32.5
 urllib3==2.6.3
-Wikipedia-API==0.9.0
