--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==4.12.1
+APScheduler==3.11.2
 certifi==2026.1.4
 charset-normalizer==3.4.4
 h11==0.16.0
@@ -13,5 +14,8 @@ pyTelegramBotAPI==4.30.0
 pytest==9.0.2
 python-telegram-bot[job-queue]>=21.0
 Wikipedia-API>=0.6.0
+pytz==2025.2
 requests==2.32.5
+tzlocal==5.3.1
 urllib3==2.6.3
+Wikipedia-API==0.9.0
